Update docker-compose.yml - bulid dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,10 @@ services:
 
 #GLPI Container
   glpi:
-    image: aguyonnet/glpi
+    #image: aguyonnet/glpi
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name : glpi
     hostname: glpi
     ports:
